# turborepo-ai-project-starter

./: README.md  biome.json  package.json  pnpm-lock.yaml
apps/ai-service/: .gitignore  main.py  package.json  pyproject.toml
apps/next_app/: next.config.mjs  package.json  tsconfig.json
apps/next_app/app/: layout.tsx  page.tsx
apps/next_app/app/components/: NewsCard.tsx
